backEnd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api
  labels:
    app: back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api
    spec:
      containers:
      - name: back-end-api
        image: {appImage}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /tmp
          name: sky-agent-volume
      imagePullSecrets:
      - name: jenkins-harbor-registry
      volumes:
      - name: sky-agent-volume
        emptyDir: {}
