backEnd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-service
  labels:
    app: back-end-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: back-end-api
